# kaleidoscope

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  justfile  sample
include/: AST.hpp  codegen.hpp  lexer.hpp  logging.hpp  parser.hpp
src/: ast.cpp  codegen.cpp  lexer.cpp  logging.cpp  main.cpp  parser.cpp
